fixed spacing for actions on hp

--- a/drupal/sites/all/themes/tp4/sass/page/_homepage.scss
+++ b/drupal/sites/all/themes/tp4/sass/page/_homepage.scss
@@ -322,8 +322,9 @@ body.front{
       font-size: 18px;
       line-height: 24px;
       font-size: 14px;
-      line-height: 24px;
+      line-height: 18px;
       text-transform: uppercase;
+      padding-bottom: 2px;
     }
     .tab-call-to-action{
       margin-bottom: 10px;
